--- a/src/main/resources/plugin.yml
+++ b/src/main/resources/plugin.yml
@@ -1,5 +1,6 @@
 name: HyzardCore
-version: '${project.version}'
+version: 1.0
 main: me.zbrunooow.HyzardCore.Core
+load: POSTWORLD
 authors: [ zBrunooow ]
 description: Rede Hyzard - Core FullPvP
