--- a/src/main/resources/config.yml
+++ b/src/main/resources/config.yml
@@ -1,1 +1,2 @@
-Sem-Permissao: "&cVocê não tem permissão para executar esse comando!"
+Mensagens:
+  Sem-Permissao: "&cVocê não tem permissão para executar esse comando!"
