--- a/src/main/resources/plugin.yml
+++ b/src/main/resources/plugin.yml
@@ -27,5 +27,8 @@ commands:
   aviso:
     aliases: [broadcast, bc]
 #   permission: hyzardcore.aviso
+  gamemode:
+    aliases: [gm]
+#   permission: hyzardcore.gamemode
 
 
