--- a/src/main/resources/plugin.yml
+++ b/src/main/resources/plugin.yml
@@ -30,5 +30,9 @@ commands:
   gamemode:
     aliases: [gm]
 #   permission: hyzardcore.gamemode
+  ping:
+  divulgar:
+#   permission: hyzardcore.divulgar
+
 
 
