--- a/src/main/resources/config.yml
+++ b/src/main/resources/config.yml
@@ -1,2 +1,11 @@
+### HYZARD ESSENTIALS - CONFIGURATION
+
+Renomear:
+  Gaster-Money: false
+  Money: 10000
+
+  Gastar-XP: false
+  XP: 5
+
 Mensagens:
   Sem-Permissao: "&cVocê não tem permissão para executar esse comando!"
