heal, feed, perfil

--- a/src/main/resources/plugin.yml
+++ b/src/main/resources/plugin.yml
@@ -64,5 +64,8 @@ commands:
 #   permission: hyzardcore.warp.nomewarp
 #   permission: hyzardcore.warps (listar warps no chat)
 
+  heal:
+  feed:
+
 
 
