Updates (16/08/2022) - 23:30 [Arrumado delay homes + Limitando homes]

--- a/src/main/resources/plugin.yml
+++ b/src/main/resources/plugin.yml
@@ -196,8 +196,15 @@ commands:
 #   permission: hyzardcore.flyspeed
 
   sethome:
-#   permission: hyzardcore.sethome
+    aliases: [setarhome]
+  #   permission: hyzardcore.sethome
 
   home:
     aliases: [homes]
 #   permission: hyzardcore.home
+
+  delhome:
+    aliases: [deletarhome]
+  #   permission: hyzardcore.home
+
+  viciado:
