--- a/src/main/resources/config.yml
+++ b/src/main/resources/config.yml
@@ -9,5 +9,11 @@ Config:
     Sempre-Dia: true
     Mundos: ["world", "mundo2", "mundo3"]
 
+  Tags:
+    Top-Online:
+      # [viciado] (LEGENDCHAT OU NCHAT)
+      Ativar: true
+      Tag: "&e[Viciado] "
+
 Mensagens:
   Sem-Permissao: "&cVocê não tem permissão para executar esse comando!"
